# bv-sized

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  bv-sized.cabal  cabal.project  changelog.md
.github/workflows/: test.yml
src/Data/BitVector/: Sized.hs
src/Data/BitVector/Sized/: App.hs  BitLayout.hs  Internal.hs  Overflow.hs  Panic.hs  Signed.hs  TH.hs  Unsigned.hs
src/Data/Parameterized/: WidthRepr.hs
test/: Main.hs  Test.hs
