name:                bv-sized
version:             0.7.0
category:            Bit Vectors
synopsis:            a BitVector datatype that is parameterized by the vector width
description:
  This module defines a width-parameterized 'BitVector' type and various associated
  operations that assume a 2's complement representation.
extra-source-files:  changelog.md
homepage:            https://github.com/GaloisInc/bv-sized
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           Galois Inc., Ben Selfridge March 2018
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Data.BitVector.Sized
                       Data.BitVector.Sized.Signed
                       Data.BitVector.Sized.Unsigned
  other-modules:       Data.BitVector.Sized.Internal
  build-depends:       base >= 4.7 && < 5,
                       parameterized-utils
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
